# ChangeLog for games-misc/asr-manpages
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/asr-manpages/ChangeLog,v 1.15 2010/02/04 05:04:34 jer Exp $

  04 Feb 2010; Jeroen Roovers <jer@gentoo.org> asr-manpages-1.3_rc6.ebuild:
  Stable for HPPA (bug #288809).

  06 Jan 2010; Joseph Jezak <josejx@gentoo.org> asr-manpages-1.3_rc6.ebuild:
  Marked ppc stable for bug #288809.

  31 Dec 2009; Brent Baude <ranger@gentoo.org> asr-manpages-1.3_rc6.ebuild:
  Marking asr-manpages-1.3_rc6 ppc64 for bug 288809

  14 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  asr-manpages-1.3_rc6.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #288809

  25 Oct 2009; Markus Meier <maekke@gentoo.org> asr-manpages-1.3_rc6.ebuild:
  amd64/x86 stable, bug #288809

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  asr-manpages-1.3_rc6.ebuild:
  Stable on alpha, bug #288809

*asr-manpages-1.3_rc6 (03 Nov 2007)

  03 Nov 2007; Tupone Alfredo <tupone@gentoo.org>
  +asr-manpages-1.3_rc6.ebuild:
  Version bump

  03 Jun 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  asr-manpages-1.3_rc5.ebuild:
  Stable on sparc, thanks to dakon

  03 Jun 2004; Guy Martin <gmsoft@gentoo.org> asr-manpages-1.3_rc5.ebuild:
  Marked stable on hppa.

  06 Apr 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  asr-manpages-1.3_rc5.ebuild:
  Added ~sparc, #46909

  31 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  asr-manpages-1.3_rc5.ebuild:
  use mirror://

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  asr-manpages-1.3_rc5.ebuild:
  inherit eutils for epatch; use epatch; use mirror://; fix IUSE

*asr-manpages-1.3_rc5 (13 Feb 2003)

  29 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*funny-manpages-1.3_rc4 (14 Dec 2002)

  14 Dec 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Paul Belt <gaarde@yahoo.com>.