@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/asr-manpages/Attic/asr-manpages-1.3_rc5.ebuild,v 1.10 2006/06/21 17:27:53 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/asr-manpages/Attic/asr-manpages-1.3_rc5.ebuild,v 1.11 2010/10/08 02:35:51 leio Exp $
 
 inherit eutils
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://debian/pool/main/a/asr-manpages/${MY_P}.orig.tar.gz
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86"
+KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86"
 IUSE=""
 
 RDEPEND="virtual/man"
