@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/asr-manpages
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/asr-manpages/ChangeLog,v 1.15 2010/02/04 05:04:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/asr-manpages/ChangeLog,v 1.16 2010/10/08 02:35:51 leio Exp $
+
+  08 Oct 2010; Mart Raudsepp <leio@gentoo.org> asr-manpages-1.3_rc5.ebuild:
+  Drop to ~mips
 
   04 Feb 2010; Jeroen Roovers <jer@gentoo.org> asr-manpages-1.3_rc6.ebuild:
   Stable for HPPA (bug #288809).
